# internal/dto/category.go
@@ -3,3 +3,8 @@ package dto
 type CreateCategoryRequest struct {
 	Name string `json:"name" validate:"required"`
 }
+
+type CategoryResponse struct {
+	Id   string `json:"id" validate:"required"`
+	Name string `json:"name" validate:"required"`
+}
